--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,9 +1,6 @@
 ---
-- name: Update the apt cache
-  apt: update-cache=yes cache_valid_time=86400
-
 - name: Install common software
-  apt: name={{item}} state=present
+  apt: name={{item}} state=present update-cache=yes cache_valid_time=864000
   with_items:
     - htop
     - strace
