--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -23,9 +23,11 @@
 - name: Update hosts - add hostname to /etc/hosts
   lineinfile: 'line="127.0.0.1 {{common_hostname}}" dest=/etc/hosts state=present'
 
-- name: set locale to en_US.UTF-8
-  command: /usr/sbin/update-locale LANG=en_US.UTF-8 LC_ALL=en_US.UTF-8
+- name: Ensure that locale is present
+  locale_gen: name={{common_locale}} state=present
 
+- name: Set locale
+  template: src=default.j2 dest=/etc/default/locale
 
 - name: Set timezone variables
   copy: content={{common_timezone}} dest=/etc/timezone owner=root group=root mode=0644 backup=yes
