Change screen to tmux. Add zsh

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,7 +15,8 @@
     - iotop
     - dstat
     - iptraf
-    - screen
+    - tmux
+    - zsh
 
 - name: Set hostname
   hostname: name={{common_hostname}}
